# BookTranslateAI

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  executar.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: __init__.py  chapter_manager.py  chunker.py  document_generator.py  extractors.py  logging_config.py  parallel.py  progress.py  translator.py
tests/: README.md  __init__.py  conftest.py  test_chunker.py  test_extractors.py  test_logging_config.py.bak  test_logging_config_simple.py  test_parallel.py.bak  test_parallel_simple.py  test_progress.py.bak  test_progress_simple.py  test_translator.py
